增加切换设备功能

--- a/app/src/main/res/layout/activity_device_camera.xml
+++ b/app/src/main/res/layout/activity_device_camera.xml
@@ -136,6 +136,14 @@
         android:gravity="right"
         android:layout_below="@+id/layoutPlayWnd">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="200dp"
+            android:layout_gravity="center_vertical"
+            android:textSize="20sp"
+            android:text="设备IP列表:"/>
+
         <ImageButton
             android:id="@+id/add_user_device"
             android:layout_width="30dp"
