--- a/app/src/main/res/layout/activity_connect_device.xml
+++ b/app/src/main/res/layout/activity_connect_device.xml
@@ -10,8 +10,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center_horizontal"
         android:src="@drawable/connect_device_pic"/>
 
     <LinearLayout
@@ -22,7 +23,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="30dp"
             android:text="@string/device_login_ip"
             android:textSize="18sp"
             android:textColor="@color/black"/>
@@ -32,12 +33,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="40dp"
             android:layout_marginLeft="15dp"
             android:padding="5dp"
             android:background="@color/white"
             android:singleLine="true"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:ems="10"/>
     </LinearLayout>
 
     <LinearLayout
@@ -49,7 +51,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="30dp"
             android:text="@string/Enter_Device_Port"
             android:textSize="18sp"
             android:textColor="@color/black"/>
@@ -59,12 +61,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="40dp"
             android:layout_marginLeft="15dp"
             android:padding="5dp"
             android:background="@color/white"
             android:singleLine="true"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:ems="10"/>
     </LinearLayout>
 
     <LinearLayout
@@ -76,7 +79,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="30dp"
             android:text="@string/device_login_name_hint"
             android:textSize="18sp"
             android:textColor="@color/black"/>
@@ -86,12 +89,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="40dp"
             android:layout_marginLeft="15dp"
             android:padding="5dp"
             android:background="@color/white"
             android:singleLine="true"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:ems="10"/>
     </LinearLayout>
 
     <LinearLayout
@@ -103,7 +107,7 @@
         <TextView
             android:layout_width="62dp"
             android:layout_height="35dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="30dp"
             android:gravity="right|center_vertical"
             android:text="@string/device_login_password_hint"
             android:textSize="18sp"
@@ -114,12 +118,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginRight="15dp"
+            android:layout_marginRight="40dp"
             android:layout_marginLeft="15dp"
             android:padding="5dp"
             android:background="@color/white"
             android:singleLine="true"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:ems="10"/>
     </LinearLayout>
 
 
