--- a/app/src/main/res/layout/activity_device_camera.xml
+++ b/app/src/main/res/layout/activity_device_camera.xml
@@ -133,16 +133,15 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="right"
         android:layout_below="@+id/layoutPlayWnd">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="180dp"
-            android:layout_gravity="center_vertical"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_horizontal|center_vertical"
             android:textSize="20sp"
-            android:text="设备IP列表:"/>
+            android:text="设备IP列表"/>
 
         <ImageButton
             android:id="@+id/add_user_device"
@@ -163,8 +162,18 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/button_add_refresh"
+        android:background="@color/black"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/under_content"
-        android:layout_below="@+id/button_add_refresh"
+        android:layout_below="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical">
