--- a/app/src/main/res/layout/add_device_dialog.xml
+++ b/app/src/main/res/layout/add_device_dialog.xml
@@ -4,12 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+
     <TextView
         android:id="@+id/tvuserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:text="IP：" />
@@ -21,6 +22,7 @@
         android:layout_alignBaseline="@+id/tvuserName"
         android:layout_alignBottom="@+id/tvuserName"
         android:layout_marginLeft="30dp"
+        android:layout_marginRight="20dp"
         android:layout_toRightOf="@+id/tvuserName"
         android:ems="10" >
 
